force-app/main/default/objects/Filter_settings__mdt/Filter_settings__mdt.object-meta.xml
<CustomObject>
    <label>Filter settings</label>
    <pluralLabel>Filter settings</pluralLabel>
</CustomObject>