force-app/main/default/objects/Filter_settings__mdt/fields/Display_type__c.field-meta.xml
<CustomField>
    <fullName>Display_type__c</fullName>
    <description>Determines how values are represented (for example, as checkbox/star rating)</description>
    <inlineHelpText>Determines how values are represented (for example, as checkbox/star rating)</inlineHelpText>
    <label>Display type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>