force-app/main/default/objects/Filter_settings__mdt/fields/Filter_label__c.field-meta.xml
<CustomField>
    <fullName>Filter_label__c</fullName>
    <label>Filter label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>