force-app/main/default/objects/Filter_settings__mdt/fields/Filter_on_api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Filter_on_api_field_name__c</fullName>
    <label>Filter on api field name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>