force-app/main/default/objects/Filter_settings__mdt/fields/Multiselect_filter__c.field-meta.xml
<CustomField>
    <fullName>Multiselect_filter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Multiselect filter</label>
    <type>Checkbox</type>
</CustomField>